Fix: Alteração HTML e CSS

--- a/Web-data-viz/public/principal.html
+++ b/Web-data-viz/public/principal.html
@@ -19,67 +19,54 @@
             <nav class="nav">
                 <a href="#sobre">Quem sou eu</a>
                 <a href="#contato">Contato</a>
-                <a href="#quiz">Quiz</a> <!-- Ainda não feito-->
+                <a href="/public/quiz/quiz.html">Quiz</a> <!-- Ainda não feito-->
             </nav>
         </div>
     </header>
-
     <section class="secao-principal">
         <div class="conteudo-principal">
             <h2 class="titulo">Abraçe a Natureza</h2>
         </div>
     </section>
-
     <section id="sobre" class="secao-sobre">
         <div class="container secao-flex">
             <div class="sobre-image-wrapper">
             </div>
             <div class="sobre-text-content">
-                <h3>Mais sobre meu projeto</h3>
+                <h3>Mais sobre mim e meu Projeto</h3>
                 <p>
-                    Somos apaixonados por viagens e acreditamos que cada aventura deve ser divertida e inesperada como
-                    abrir um mapa do tesouro! Vem com a gente, porque o mundo é um playground cheio de surpresas
-                    esperando por você.
+                    Sou apaixonado por viagens e acredito que cada aventura deve ser divertida e inesperada como
+                    abrir um mapa do tesouro!
+                </p>
+                <a href="#" class="botao botao-principal">Saiba mais</a>
+            </div>
+        </div>
+
+        <div class="container secao-flex">
+            <div class="sobre-image-wrapper">
+            </div>
+            <div class="sobre-text-content">
+                <h3>comentáio: contarei mais sobre mim</h3>
+                <p>
+                    AQUI COMENTAREI
+                </p>
+                <a href="#" class="botao botao-principal">Saiba mais</a>
+            </div>
+        </div>
+        <div class="container secao-flex">
+            <div class="sobre-image-wrapper">
+            </div>
+            <div class="sobre-text-content">
+                <h3>comentário: Fechar sessão</h3>
+                <p>
+                    ULTIMAS INFOS
                 </p>
                 <a href="#" class="botao botao-principal">Saiba mais</a>
             </div>
         </div>
     </section>
-
     <section id="contato" class="secao-contato">
         <div class="container contato-grid">
-            <div class="contato-info">
-                <h4>Fale comigo</h4>
-                <p>Se interessou pelo meu trabalho? Preencha o formulário, e entrarei em contato em breve! Será um
-                    prazer
-                    falar com você.</p>
-            </div>
-            <!-- pensando em tirar o formulário-->
-            <form class="contato-form">
-                <div class="form-group-inline">
-                    <div class="input-wrapper">
-                        <label for="nome">Nome (obrigatório)</label>
-                        <input type="text" id="nome" name="nome" required>
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="sobrenome">Sobrenome</label>
-                        <input type="text" id="sobrenome" name="sobrenome">
-                    </div>
-                </div>
-
-                <div class="input-wrapper full-width">
-                    <label for="email">E-mail (obrigatório)</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-
-                <div class="input-wrapper full-width">
-                    <label for="mensagem">Mensagem (obrigatório)</label>
-                    <textarea id="mensagem" name="mensagem" rows="6" required></textarea>
-                </div>
-
-                <button type="submit" class="botao botao-secundario">Enviar</button>
-            </form>
-            <!-- tudo isso-->
         </div>
     </section>
 
@@ -94,7 +81,7 @@
             <div class="footer-detalhes">
                 <h5>Localização</h5>
                 <address>
-                    Rua Haddock Lobo<br>
+                    Rua Haddock Lobo, 595<br>
                     São Paulo, SP
                 </address>
             </div>
