Fix: Links arrumados

--- a/Web-data-viz/public/principal.html
+++ b/Web-data-viz/public/principal.html
@@ -1,101 +1,109 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+    <!DOCTYPE html>
+    <html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apoena - Descubra o Prazer de Viajar</title>
-    <link rel="stylesheet" href="/public/css/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Momo+Trust+Display&display=swap');
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Apoena - Descubra o Prazer de Viajar</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Momo+Trust+Display&display=swap');
+        </style>
+    </head>
 
-<body>
+    <body>
+        <!--HEADER AQUI /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-->
 
-    <header class="header">
-        <div class="container">
-            <h1 class="logo">Apoena</h1>
-            <nav class="nav">
-                <a href="#sobre">Quem sou eu</a>
-                <a href="#contato">Contato</a>
-                <a href="/public/quiz/quiz.html">Quiz</a> <!-- Ainda não feito-->
-            </nav>
-        </div>
-    </header>
-    <section class="secao-principal">
-        <div class="conteudo-principal">
-            <h2 class="titulo">Abraçe a Natureza</h2>
-        </div>
-    </section>
-    <section id="sobre" class="secao-sobre">
-        <div class="container secao-flex">
-            <div class="sobre-image-wrapper">
+        <header class="header">
+            <div class="container">
+                <h1 class="logo">Apoena</h1>
+                <nav class="nav">
+                    <a href="#sobre">Quem sou eu</a>
+                    <a href="#contato">Contato</a>
+                    <a href="./quiz/quiz.html">Quiz</a> <!--feito-->
+                </nav>
             </div>
-            <div class="sobre-text-content">
-                <h3>Mais sobre mim e meu Projeto</h3>
-                <p>
-                    Sou apaixonado por viagens e acredito que cada aventura deve ser divertida e inesperada como
-                    abrir um mapa do tesouro!
-                </p>
-                <a href="#" class="botao botao-principal">Saiba mais</a>
-            </div>
-        </div>
+        </header>
 
-        <div class="container secao-flex">
-            <div class="sobre-image-wrapper">
-            </div>
-            <div class="sobre-text-content">
-                <h3>comentáio: contarei mais sobre mim</h3>
-                <p>
-                    AQUI COMENTAREI
-                </p>
-                <a href="#" class="botao botao-principal">Saiba mais</a>
-            </div>
-        </div>
-        <div class="container secao-flex">
-            <div class="sobre-image-wrapper">
-            </div>
-            <div class="sobre-text-content">
-                <h3>comentário: Fechar sessão</h3>
-                <p>
-                    ULTIMAS INFOS
-                </p>
-                <a href="#" class="botao botao-principal">Saiba mais</a>
-            </div>
-        </div>
-    </section>
-    <section id="contato" class="secao-contato">
-        <div class="container contato-grid">
-        </div>
-    </section>
+        <!--CONTEÚDO AQUI /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-->
 
-    <footer class="footer">
-        <div class="container footer-grid">
-            <div class="footer-titulo">
-                <h5>Apoena</h5>
-                <p class="squarespace-note">Feito por Eric Barbosa Costa <br> <a
-                        href="https://github.com/BcEric1">GitHub</a></p>
+        <section class="secao-principal">
+            <div class="conteudo-principal">
+                <h2 class="titulo">Abraçe a Natureza</h2>
+            </div>
+        </section>
+        <section id="sobre" class="secao-sobre">
+            <div class="container secao-flex">
+                <div class="sobre-image-wrapper">
+                </div>
+                <div class="sobre-text-content">
+                    <h3>Mais sobre mim e meu Projeto</h3>
+                    <p>
+                        Sou apaixonado por viagens e acredito que cada aventura deve ser divertida e inesperada como
+                        abrir um mapa do tesouro!
+                    </p>
+                    <a href="#" class="botao botao-principal">Saiba mais</a>
+                </div>
             </div>
 
-            <div class="footer-detalhes">
-                <h5>Localização</h5>
-                <address>
-                    Rua Haddock Lobo, 595<br>
-                    São Paulo, SP
-                </address>
+            <div class="container secao-flex">
+                <div class="sobre-image-wrapper">
+                </div>
+                <div class="sobre-text-content">
+                    <h3>comentáio: contarei mais sobre mim</h3>
+                    <p>
+                        AQUI COMENTAREI 
+                    </p>
+                    <a href="#" class="botao botao-principal">Saiba mais</a>
+                </div>
             </div>
-
-            <div class="footer-detalhes">
-                <h5>Contato</h5>
-                <p>
-                    <a href="mailto:email@exemplo.com">eric.costa@sptech.school</a><br>
-                    (11) 960799143
-                </p>
+            <div class="container secao-flex">
+                <div class="sobre-image-wrapper">
+                </div>
+                <div class="sobre-text-content">
+                    <h3>comentário: Fechar sessão</h3>
+                    <p>
+                        ULTIMAS INFOS
+                    </p>
+                    <a href="#" class="botao botao-principal">Saiba mais</a>
+                </div>
             </div>
-        </div>
-    </footer>
+        </section>
+        <!--<section id="contato" class="secao-contato">
+            <div class="container contato-grid">
+            </div>
+        IMPLEMENTAR ALGUNS VALORES ONU-->
+        
+        </section>
 
-</body>
+        <!--FOOTER AQUI /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-->
+        <footer class="footer">
+            <div class="container footer-grid">
+                <div class="footer-titulo">
+                    <h5>Apoena</h5>
+                    <p class="squarespace-note">Feito por Eric Barbosa Costa <br> <a
+                            href="https://github.com/BcEric1">GitHub</a></p>
+                </div>
 
-</html>
+                <div class="footer-detalhes">
+                    <h5>Localização</h5>
+                    <address>
+                        Rua Haddock Lobo, 595<br>
+                        São Paulo, SP
+                    </address>
+                </div>
+
+                <div class="footer-detalhes">
+                    <h5>Contato</h5>
+                    <p>
+                        <a href="mailto:email@exemplo.com">eric.costa@sptech.school</a><br>
+                        (11) 960799143
+                    </p>
+                </div>
+            </div>
+        </footer>
+
+    </body>
+
+    </html>
+    <script src="/public/js/sessao.js"></script>
