Fix: Links funcionais

--- a/Web-data-viz/public/quiz/quiz.html
+++ b/Web-data-viz/public/quiz/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Perfil de Viajante</title>
-    <link rel="stylesheet" href="/public/quiz/style.css">
+    <link rel="stylesheet" href="/quiz/style.css">
 </head>
 <body>
 
@@ -23,11 +23,11 @@
             <h3>Dashboard (Dados Brutos)</h3>
             <pre id="dados-brutos"></pre>
             <button class="botao botao-principal">
-                <a href="/public/principal.html">Voltar à página  </a>
+                <a href="/principal.html">Voltar à página  </a>
             </button>
         </div>
     </div>
     
-    <script src="/public/js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
