Fix: Alteração html

--- a/Web-data-viz/public/principal.html
+++ b/Web-data-viz/public/principal.html
@@ -44,44 +44,37 @@
             <div class="div-principal">
                 <ul class="lista">
                     <li onclick="saibaMais(this)">
-                        <span>Redução do Estresse</span>
-                        <p class="descricao">Cantar ajuda a liberar tensões e proporciona um relaxamento mental,
-                            aliviando os efeitos do estresse.</p>
+                        <span>Melhoria</span>
+                        <p class="descricao">Melhoria 1</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Redução da Ansiedade</span>
-                        <p class="descricao">O canto pode acalmar a mente, reduzindo pensamentos acelerados e
-                            promovendo a serenidade.</p>
+                        <span>Melhoria</span>
+                        <p class="descricao">Melhoria 2</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Melhora do Humor</span>
-                        <p class="descricao">A prática do canto libera endorfina e dopamina, neurotransmissores que
-                            melhoram o humor e a sensação de felicidade.</p>
+                        <span>Melhoria</span>
+                        <p class="descricao">Melhoria 3</p>
                     </li>
 
                     <li onclick="saibaMais(this)">
                         <span>Fortalecimento do Sistema Imunológico</span>
-                        <p class="descricao">Cantar regularmente pode aumentar a imunidade ao reduzir os níveis de
-                            cortisol, o hormônio do estresse.</p>
+                        <p class="descricao">Melhoria 4</p>
                     </li>
                 </ul>
             </div>
             <div class="div-principal">
                 <ul class="lista">
                     <li onclick="saibaMais(this)">
-                        <span>Melhora na Comunicação</span>
-                        <p class="descricao">Ao cantar, você desenvolve habilidades de articulação e projeção de
-                            voz, melhorando sua comunicação geral.</p>
+                        <span>Melhoria</span>
+                        <p class="descricao">Melhoria 5</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Aumenta a Autoconfiança</span>
-                        <p class="descricao">Aprender a usar sua voz aumenta a confiança em si mesmo e em suas
-                            habilidades.</p>
+                        <span>Melhoria</span>
+                        <p class="descricao">Melhoria 6</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Forma de Expressão Emocional</span>
-                        <p class="descricao">O canto permite que você expresse emoções de forma profunda e
-                            autêntica.</p>
+                        <span>Melhoria</span>
+                        <p class="descricao">Melhoria 7</p>
                     </li>
                 </ul>
             </div>
