Fix: Remoção Section

--- a/Web-data-viz/public/principal.html
+++ b/Web-data-viz/public/principal.html
@@ -79,7 +79,7 @@
                 </ul>
             </div>
 
-        </div><a href="login.html" class="btn-saiba">Cadastre-se agora e descubra seu perfil de Viajante!</a>
+        </div><a href="login.html" class="botao-principal">Cadastre-se agora e descubra seu perfil de Viajante!</a>
     </div>
 
 
@@ -119,14 +119,13 @@
                 <a href="#" class="botao botao-principal">Saiba mais</a>
             </div>
         </div>
-    </section>
-    <!--<section id="contato" class="secao-contato">
-            <div class="container contato-grid">
-            </div>
-        IMPLEMENTAR ALGUNS VALORES ONU-->
+
 
     </section>
+    <!--IMPLEMENTAR ALGUNS VALORES ONU-->
+    </section>
 
+    
     <!--FOOTER AQUI /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-->
     <footer class="footer">
         <div class="container footer-grid">
